* Fix `NullPointerException` from `WeakConcurrentMap.put` through the Elasticsearch client instrumentation - {pull}1531[1531]
* Sending `transaction_id` and `parent_id` only for events that contain a valid `trace_id` as well - {pull}1537[1537]
* Fix `ClassNotFoundError` with old versions of Spring resttemplate {pull}1524[#1524]

[float]
===== Refactors
* Migrate some plugins to indy dispatcher {pull}1405[1405] {pull}1394[1394]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.19.0]]
==== 1.19.0 - 2020/11/10

[float]
===== Features
* The agent version now includes a git hash if it's a snapshot version.
  This makes it easier to differ distinct snapshot builds of the same version.
  Example: `1.18.1-SNAPSHOT.4655910`
* Add support for sampling weight with propagation in `tracestate` W3C header {pull}1384[#1384]
* Adding two more valid options to the `log_level` config: `WARNING` (equivalent to `WARN`) and `CRITICAL`
  (will be treated as `ERROR`) - {pull}1431[1431]
* Add the ability to disable Servlet-related spans for `INCLUDE`, `FORWARD` and `ERROR` dispatches (without affecting
  basic Servlet capturing) by adding `servlet-api-dispatch` to <<config-disable-instrumentations>> - {pull}1448[1448]
* Add Sampling Profiler support for AArch64 architectures - {pull}1443[1443]
* Support proper transaction naming when using Spring's `ServletWrappingController` - {pull}1461[#1461]
* Update async-profiler to 1.8.2 {pull}1471[1471]
* Update existing Hibernate Search 6 instrumentation to work with the latest CR1 release
* Deprecating the `addLabel` public API in favor of `setLabel` (still supporting `addLabel`) - {pull}1449[#1449]

[float]
===== Bug fixes
* Fix `HttpUrlConnection` instrumentation issue (affecting distributed tracing as well) when using HTTPS without using
  `java.net.HttpURLConnection#disconnect` - {pull}1447[1447]